# federated_learning

./: .gitignore  =  Makefile  README.md  pyproject.toml  requirements.txt
dockerfiles/: predict_model.dockerfile  train_model.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
federated_learning/: __init__.py
notebooks/: centralized_learning.ipynb  fedavg_KD.ipynb  fedcluster_KD.ipynb  federated_learning.ipynb  fedmixcluster.ipynb  plot.ipynb  plot_fig2_fig3.ipynb  spleen_seg_with_flower.ipynb  spleen_segmentation_3d.ipynb
